# auto-transcribe-v2

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
backend/: config.example.yaml  config.py  dedup.py  logger.py  main.py  notifier.py  pipeline.py  pyproject.toml  summarizer.py  transcriber.py  watcher.py
backend/inputs/: __init__.py  icloud.py  plaud.py  telegram.py  youtube_subs.py
backend/prompts/: 1on1.md  ad.md  call.md  capture.md  class.md  content.md  daylog.md  discussion.md  meeting.md  memo.md  social-organic.md  twitter.md  video-long.md  video-short.md  weekly-report.md  xiaohongshu.md
backend/tests/: test_config.py  test_dedup.py  test_icloud.py  test_plaud.py  test_summarizer.py  test_telegram.py  test_transcriber.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  main.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: DropZone.svelte  ProcessingCard.svelte  Sidebar.svelte  Titlebar.svelte  Toggle.svelte  TypeBadge.svelte
frontend/src/lib/: api.js  stores.js  websocket.js
frontend/src/pages/: Dashboard.svelte  History.svelte  Settings.svelte
frontend/src/styles/: global.css
